--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,26 +4,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border: 0.5px solid black;
     font-family: 'DM Sans', sans-serif;
+    /* border: 0.5px solid black; */
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar {
     width: 100%;
-    height: 400px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
+    width: 50%;
     height: 100px;
     font-size: 17px;
   }
+
+.users__navbar {
+    height: 60px;
+}
 
 span {
     cursor: pointer;
